                    this is used to know which list spectra belong in.
January 10, 2008  - Fix errors in 1d construction.
          	  - Use spectra organized by parameter to make
                    increments a bit more efficent.
		  - Use observers to maintain the flattened gate lists
                    so there's no increment time overhead.
January 11, 2008 - Make CFlattenedGateList work even if the gate container
                   for the gate has changed from the inserted one.. 
                   that is match the name.
January 16, 2008 - Separate filter output formatting from the filter
                   class itself.
January 17, 2008 - Provide extensible filter format structure.
                 - Fix error in filter save in gui .. parameter list had
		   an extra layer of {}'s.
                 - Add ability to introspect filter format.
January 18, 2008 - Added support for the newer spectrum types to the API
                 - Added filter support to the API.
January 25, 2008 - Debugged filter support API
                 - Fixed error in gate flattener handling that was preventing
                   gate from being properly applied.
February 25,2008 - Work around lesstif file dialog bug..For each re-use of the file selection
                   dialog, explicitly set the search mask to the dirname of the  mask with
                   *.win appended.  lesstif has the tendency to store the selected file
                   in the filter path.
March 12, 2008   - Cosmetic changes to folder gui file menu and the prompter for the 
                   which gui to use dialog.
March 21, 2008   - Fix error in MCM GUI where parameters with empty units could cause
                   errors in the data structures keeping track of the parameters.
                   Specifically, the entries in the units list would collapse out of 
                   that list due to the use of append, rather than lappend to create those lists.
